--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "project-lvl1-s220",
+  "name": "vitaclear1-package",
   "version": "0.0.1",
   "description": "Learning project 1",
-  "main": "index.js",
+  "main": "dist/index.js",
   "bin": {
-	  "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js"
   },
-  "files": [ "dist" ],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel-node": "babel-node",
@@ -28,5 +30,8 @@
     "babel-core": "*",
     "babel-preset-env": "*",
     "babel-preset-stage-0": "*"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.7"
   }
 }
