--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitaclear1-package",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Learning project 1",
   "main": "dist/index.js",
   "bin": {
@@ -13,7 +13,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel-node": "babel-node",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "eslint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,11 @@
     "babel-cli": "*",
     "babel-core": "*",
     "babel-preset-env": "*",
-    "babel-preset-stage-0": "*"
+    "babel-preset-stage-0": "*",
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
   },
   "dependencies": {
     "readline-sync": "^1.4.7"
