--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "vitaclear1-package",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Learning project 1",
   "main": "dist/index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "files": [
     "dist"
