--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitaclear1-package",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "Learning project 1",
   "main": "dist/index.js",
   "bin": {
@@ -8,7 +8,8 @@
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-balance": "dist/bin/brain-balance.js"
+    "brain-balance": "dist/bin/brain-balance.js",
+    "brain-progression": "dist/bin/brain-progresson"
   },
   "files": [
     "dist"
