--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitaclear1-package",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "description": "Learning project 1",
   "main": "dist/index.js",
   "bin": {
@@ -9,7 +9,8 @@
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-balance": "dist/bin/brain-balance.js",
-    "brain-progression": "dist/bin/brain-progression.js"
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "files": [
     "dist"
