--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitaclear1-package",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "Learning project 1",
   "main": "dist/index.js",
   "bin": {
@@ -10,7 +10,8 @@
     "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-balance": "dist/bin/brain-balance.js",
     "brain-progression": "dist/bin/brain-progression.js",
-    "brain-prime": "dist/bin/brain-prime.js"
+    "brain-prime": "dist/bin/brain-prime.js",
+    "brain-newbalance": "dist/bin/brain-newbalance.js"
   },
   "files": [
     "dist"
